--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.13.5",
     "@apollo/experimental-nextjs-app-support": "^0.11.11",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "graphql": "^16.10.0",
     "jotai": "^2.12.2",
